test/valid/list.js
var x = true;
x = (1,'a',false);

