test/invalid/vartest.js
var x = false;
x = 'a';

